[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "md2hwpx"
version = "0.1.0"
description = "Convert Markdown documents to HWPX (Korean Hangul word processor) format"
requires-python = ">=3.9"
dependencies = [
    "python-hwpx>=1.0.0",
    "mistune>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
md2hwpx = "md2hwpx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
